--- a/latex/RandomWalks.tex
+++ b/latex/RandomWalks.tex
@@ -175,7 +175,10 @@ Future ones will be added here as well.
  This means that the flux of walkers out of a boundary is zero, which is the same as Neumann boundary conditions on the PDE level. \\
  Dirichlet boundaries can (probably) be implemented by adding or removing walkers on the boundaries (or in a buffer-zone around them) untill we have the desired concentration of walkers.
  \item Negative concentration of walkers \\
- Should not be to difficult...
+ The concentration of walkers is calculated as $NP(x,t)$ where $P(x,t)$ is really only an estimate of the actual probability distribution, calculated by dividing the number of walkers in one area $x\pm\frac{\Delta x}{2}$ by the total number of walkers. 
+ Seeing as negative probabilities does not make sense, and neither does a negative number of walkers, we will eventually run into some problems when the solution of the PDE takes negative values (which it might do). 
+ The solution to this is simply to store the signs of the solution to the PDE in an array, and send only positive values to the random walk solver. 
+ When we convert the number of walkers back to a PDE solution we still have the sign from before and can multiply the concentration by the sign it had in the last timestep. 
  \item Smooth solutions\\
  A diffusion process is very effective when it comes to dampig fast fluctuations, and so any solution of the diffusion equation will be smooth. 
  When we itroduce a stochastic process, we will potentially also introduce fast fluctutations from one timestep to the next. 
@@ -250,8 +253,34 @@ Since we can only evaluate the diffusion constant at the mesh points (or strictl
 Inerting this gives us 
 \begin{align*}
  \nabla D\nabla u\approx\frac{1}{2\Delta x^2}\left((D_{i+1,j}+D_{i,j})(u_{i+1,j}-u_{i,j})-(D_{i,j}+D_{i-1,j})(u_{i,j}-u_{i-1,j})\right) \\
- +\frac{1}{\Delta y^2}\left((D_{i,j+1}+D_{i,j})(u_{i,j+1}-u_{i,j})-(D_{i,j}+D_{i,j-1})(u_{i,j}-u_{i,j-1})\right)
+ +\frac{1}{2\Delta y^2}\left((D_{i,j+1}+D_{i,j})(u_{i,j+1}-u_{i,j})-(D_{i,j}+D_{i,j-1})(u_{i,j}-u_{i,j-1})\right)
 \end{align*}
+
+\subsection{Stability}\label{stability}
+
+In section \ref{discretizing} we used the Forward Euler approximation to the time derivative. 
+Unfortunately the resulting scheme is potentially unstable, as we shall now see. 
+We start out by assuming that the solution $u(x,t)$ is on the form 
+\begin{equation}\label{von_neumann_fourier_solution}
+ u(x,t) = A^n\exp(ikp\Delta x)
+\end{equation}
+where $i^2=-1$ is the imaginary unit and $A^n$ is an amplification factor which, for the solution \ref{} ideally should be $\exp(-\pi^2t)$, but will be something else in the numerical case. 
+We notice that we must have $\left|A\right|\leq 1$ if $u$ is to not blow up. 
+Inserting \ref{von_neumann_fourier_solution} in the simplified version of the variable coefficient scheme (where the coefficient is constant) gives us the following
+\begin{align*}
+ \exp(ikp\Delta x)\left(A^{n+1}-A^n\right) &= A^n\frac{D\Delta t}{\Delta x^2}\left(\exp(ik(p+1)\Delta x)-2\exp(ikp\Delta x) +\exp(ik(p-1)\Delta x)\right)\\
+  A^n\exp(ikp\Delta x)\left(A-1\right) &=  A^n\exp(ikp\Delta x)\frac{D\Delta t}{\Delta x^2}\left(\exp(ik\Delta x) -2 + \exp(-ik\Delta x)\right)\\
+\end{align*}
+Using the well known identies $\exp(iax)+\exp(-iax) = \frac{1}{2}\cos^2\left((\frac{ax}{2}\right)$  and $\cos^2(ax)-1 = \sin^2(ax)$ gives us
+\begin{equation}
+ A-1 = \frac{D\Delta t}{\Delta x^2}\sin^2\left(\frac{k\Delta x}{2}\right)
+\end{equation}
+We now insert for the ``worst case scenario'' $max(\sin^2\left(\frac{k\Delta x}{2}\right))= 1$
+\begin{equation}
+ A = \frac{D\Delta t}{2\Delta x^2}+1 \implies \Delta t\leq\frac{\Delta x^2}{2D}
+\end{equation}
+In 2d this criterion is halved, and for the anisotropic case we must insert for the maximum value of D which, again, will be the ``worst case scenario''.
+
 
 
 \subsection{Truncation error}\label{truncation_error}
