--- a/latex/main.tex
+++ b/latex/main.tex
@@ -72,11 +72,11 @@ This is an abstract text.
 \include{Intro}
 
 \chapter{Basic Theory}
-\include{RandomWalks}
+\include{theory}
 
 
 \chapter{Analysis}
-\include{errors}
+\include{analysis}
 
 \chapter{Results}
 
