--- a/latex/theory.tex
+++ b/latex/theory.tex
@@ -245,7 +245,28 @@ When we convert this to the continous variables $x$ and $t$ we get the solution 
 \begin{equation}\label{solution_convection_diffusion_eq}
  C(x,t) = \frac{N}{\sqrt{4\pi Dt}}\exp\left(-\frac{(x-vt)^2}{4Dt}\right)
 \end{equation}
-Where $v = \frac{d}{\Delta t}$ is the velocity of the concentration and $D$ is the well known diffusion constant, inserted from the Einstein relation $\sigma^2 = 2D\Delta t$.
+Where $v = \frac{d}{\Delta t}$ is the velocity of the concentration and $D$ is the well known diffusion constant, inserted from the Einstein relation $\sigma^2 = 2D\Delta t$.\\
+The only problem with the solution \ref{solution_convection_diffusion_eq} is that it is invalid for $t=0$. 
+In order to use it we will need an initial condition which fits the rest of the solution. 
+We try and find this by first checking by simulation if it converges towards some initial solution as $t\to0$ and if so, extrapolate this to $t=0$ as the initial condition. 
+Figure \ref{convection_diffusion_eq_initial_condition} shows the result of this little experiment, and as we clearly see it does diverge as $t\to0$. 
+However, it also converges to a Dirac deltafunction, $\delta(x)$ which is defined by its properties
+\begin{align*}
+\delta(x) = \begin{cases} +\infty, & x = 0 \\ 0, & x \ne 0 \end{cases}
+\end{align*}
+and
+\begin{equation*}
+ \int_{-\infty}^\infty \delta(x) \, dx = 1
+\end{equation*}
+The Dirac delta function often sought as an inital condition in experimental setups for measurements on diffusion processes because of its compatibility with a variety of diffusion equations, and should do a very good job in our numerical setup as well. 
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[scale=0.7]{/home/fredriep/Dropbox/uio/thesis/latex/Figures/convection_diffusion_eq_initial_condition.eps}
+ \caption[Initial condition for convection diffusion]{Experiment to determine the initial condition of equation \ref{solution_convection_diffusion_eq}}
+ \label{convection_diffusion_eq_initial_condition}
+\end{figure}
+
 
 \section{Some words about partial differential equations}\label{some_words_on_PDEs}
 \subsection{Discretizing}\label{discretizing}
