--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -76,7 +76,7 @@ Although this is not an exact measurment, it is another indication that the impl
  \caption{}
  \label{errorplot_FE1D_noWalk_long}
 \end{subfigure}
-\caption[Numerical error for 1D Forwar Euler discretization]{Numerical error for 1D Forwar Euler discretization of the PDE. Nothing else is done to the simulation.}
+\caption[Numerical error for 1D Forward Euler discretization]{Numerical error for 1D Forwar Euler discretization of the PDE. Nothing else is done to the simulation.}
 \label{errorplot_FE1D_noWalk_super}
 \end{figure}
 
@@ -108,7 +108,72 @@ After we reach $Hc \sim 10^4$ the error is dominated by the truncation error of 
 This tells us that the error associated with introducing a random walk model on parts of the mesh behaves roughly as we hoped; it tends to zero for large numbers of walkers. 
 Meaning of course that the calculations in section \ref{} are not hopeless.
 
+\subsection{Increasing the timestep and the relative size of walk-area}\label{increasing_dt}
 
+Now that we have an estimate of how to adjust the steplength of the walkers in order to adjust for the timestep, $\Delta t$, on the PDE level we would like to investigate the actual effects of running the simulation with a larger timestep to verify our calculations. 
+First off all, figure \ref{errorplot_BE1D_noWalk} shows the errornorm of a simulation of the simplest diffusion equation \ref{simple_diffusion_equation} discretised by the Backward Euler scheme \ref{BE_discretisation_isotropic} using a timestep which would make the Forward Euler discretization unstable (There is something strange about its convergence). 
+Figure \ref{errorplot_BE1D_Walk} shows the same simulation for various conversion parameters for the random walk. 
+These simulations have input from the random walk model on some 20\% of the mesh points. 
+As a comparison we can turn to figures \ref{errorplot_BE1D_walk_5_percent} and \ref{errorplot_BE1D_walk_35_percent} which have 5\% and 35\% of the meshpoints affected by walkers.
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.48\textwidth}
+\includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1514/results/deterministic_errorplot.eps}
+\caption{}
+\label{errorplot_BE1D_noWalk}
+\end{subfigure}
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1514/results/errorplot.eps}
+ \caption{}
+ \label{errorplot_BE1D_Walk}
+\end{subfigure}
+\caption[Numerical error for 1D Backward Euler discretization]{Numerical error for 1D Backward Euler discretization of the PDE. In figure b there has been added walkers to the solution in the area $x\in[0.5,0.7]$.}
+\label{errorplot_BE1D_first}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1559/results/errorplot.eps}
+ \caption{Having walkers on 5\% of the meshpoints.}
+ \label{errorplot_BE1D_walk_5_percent}
+\end{subfigure}
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1603/results/errorplot.eps}
+ \caption{Having walkers on 35\% of the meshpoints.}
+ \label{errorplot_BE1D_walk_35_percent}
+\end{subfigure}
+\caption{The effect of increasing the size of the walk area for a fixed $\Delta t = 0.001$ using the BE discretization.}
+\label{testing_walk_area_size_BE}
+\end{figure}
+
+These experiments have been done using the Backward Euler discretization so that we can simulate for a longer time and still see the effects to their full extent. 
+We have also investigated the effects of changing the timestep (also using the BE discretization to avoid instabilities and be able to do longer simulations). 
+The results are summarized in figure \ref{testing_dt_size}. 
+We notice something a bit unexpected in figure \ref{errorplot_BE1D_walk_large_dt}. 
+Unlike almost all the other comparable plots, it seems that using the least ammount of walkers gives the best result here. 
+This might be because the system quickly reaches its steady state, and will then be very well described by the contiuum model. 
+Having a small conversion factor, Hc, will mean that very quickly there will be no walkers which sort of ruins the point. 
+This particular equation has steady state $u(t\to\infty,x) = 0$, and so not having any walkers will be perfect. What we should read from this figure is rather that the simulation with the most walkers converges to an acceptable error, and that this is acchieved just as fast as for the other two simuations.
+
+
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1625/results/errorplot.eps}
+ \caption{Using a normal $\Delta t = 0.0001$.}
+ \label{errorplot_BE1D_small_dt}
+\end{subfigure}
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_19112013_1627/results/errorplot.eps}
+ \caption{Using a large $\Delta t = 0.01$.}
+ \label{errorplot_BE1D_walk_large_dt}
+\end{subfigure}
+\caption{}
+\label{testing_dt_size}
+\end{figure}
 
 \subsection{The effects of adding drift to the walkers}\label{effect_of_drift_on_walkers}
 
@@ -116,7 +181,7 @@ As shown in section \ref{random_walks_and_drift} adding drift to the walkers wil
 In our analysis so far we have completely ignored the spatial truncation error because it is of second order, and the truncation error in time is of first order. 
 When discretizing the convection diffusion equation however, we must take care to use an approximation to the first order spatial derivative that has a truncation error of second order. 
 
-Otherwise the truncation error in this term will completely dominate seeing as $\Delta t\Delta x$. 
+Otherwise the truncation error in this term will completely dominate seeing as $\Delta t<\Delta x$. 
 We must also find a new stability criterion for the scheme. \\
 As for now, the Leap-frog discretization will do (though it is not by far a perfect choise seeing as it is unstable). 
 As a sidenote we can also note that the Neumann boundary condition will be very clear in this scheme. 
