--- a/latex/theory.tex
+++ b/latex/theory.tex
@@ -46,7 +46,7 @@ This can also be calculated rather straightforwardly.
 \end{align*}
 Like before, the average net displacement is given as $S^2 = (2R-N)^2$ and we obtain
 \begin{align*}
- \langle S^2\rangle = 4\langle R^2\langle -4N\langle R\rangle + N^2 &= 4((Np)^2 +Npq) -4N^2p + N^2\\
+ \langle S^2\rangle = 4\langle R^2\rangle -4N\langle R\rangle + N^2 &= 4((Np)^2 +Npq) -4N^2p + N^2\\
  = N^2(4p^2 -4p +1) +4Npq &= N^2(2p-1)^2 +4Npq = N^2(p-q)^2 +4Npq.
 \end{align*}
 which for the 1D symmetric walk gives $\langle S^2\rangle =N$ and the variance, denoted $\langle\Delta S^2\rangle = \langle\langle S^2\rangle-\langle S\rangle^2\rangle$, is found by instertion as
@@ -146,8 +146,8 @@ and see that they are equal, meaning that the diffusion equation is satisfied.
 
 \subsection{Choosing random walk algorithm}\label{choosing_random_walk_algorithm}
 
-As this article points out \cite{farnell2005monte} the simplest random walk model, which places walker on discrete mesh points and uses a fixed step length, has been used with great succsess to model diffusion processes. 
-However, this model will struggle with reproducing anisotropic diffusion, that is $D = D(x)$. Farnell and Gibson also suggest a method for improving the results by adjusting the step length according to to position, thus effectively adjusting the diffusion constant of the walk as well. 
+As this article points out \cite{farnell2005monte} the simplest random walk model, which places walkers on discrete mesh points and uses a fixed step length, has been used with great succsess to model diffusion processes. 
+However, this model will struggle with reproducing anisotropic diffusion, that is $D = D(x)$. Farnell and Gibson also suggest a method for improving the results by adjusting the step length according to position, thus effectively adjusting the diffusion constant of the walk as well. 
 We see then that the simplest model is rather robust, and well tested. 
 However, the aim of this project is to combine two realistic models for diffusion on different length scales, and the simplest random walk model has one fundamental flaw in that view; it is not a realistic model for diffusing particles. 
 Brownian motion is a more realistic physical model for diffusing particles, and can (I think) quite easily be modified to model anisotropic diffusion as well. 
@@ -164,7 +164,7 @@ Equation \ref{steplength} shows the step length as a function of the diffusion c
 If we simply replace the diffusion constant by a function $D = D(\vec{x})$ we are at least started, but this will not quite be sufficient as Farnell and Gibson point out \cite{farnell2005monte}. 
 Through their experiments they found that only adjusting the steplength will not improve the error noticably and reasoned that this is because the walkers are still as likely to jump in both directions (right or left in 1d), and that the stepsize is the same in both cases, hence the model does not resemble anisotropy. 
 They went on to introduce an adjusted steplength and an adjusted step probability, a solution they landed on after trial and error. 
-The expressions they proposed are listed in equations \ref{farnell_and_gibson_1} to \ref{farnell_and_gibson_n}. 
+The expressions they proposed are listed in equations \ref{farnell_and_gibson_1} to \ref{farnell_and_gibson_5}. 
 \begin{equation}\label{farnell_and_gibson_1}
  \Delta_p(x) = \frac{1}{2}\left(L(x) + L(x +\Delta_p(x))\right) \to L(x) +\frac{1}{2}L(x)L'(x)
 \end{equation}
@@ -190,7 +190,7 @@ We notice that the adjusted steplength we proposed to start with is still a part
 
 Another point we have yet to say something about is diffusion that has a drift term, $\frac{\d u}{\d x}$. 
 Initially one thought that diffusion in the ECS of the brain was governed by a drift term , but the modern preception is that this drift term is in the very least negligible \cite{nicholson2001diffusion}.
-The drift term might be of importance in other applications, however, and som we should look into it.\\
+The drift term might be of importance in other applications, however, and something we should look into it.\\
 How do we model random walks with drift? \\
 A first instinct is to simply add some vector to the brownian motion model, thus forcing all walkers to have a tendency to walk a certain direction. 
 This approach can also be used in the fixed steplength (or variable steplength in the anisotropic case)  if we express the new step, $\vec{s}$, as
@@ -253,7 +253,7 @@ The Dirac delta function often sought as an inital condition in experimental set
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.7]{/home/fredriep/Dropbox/uio/thesis/latex/Figures/convection_diffusion_eq_initial_condition.eps}
+ \includegraphics[scale=0.7]{Figures/convection_diffusion_eq_initial_condition.eps}
  \caption[Initial condition for convection diffusion]{Experiment to determine the initial condition of equation \ref{solution_convection_diffusion_eq}}
  \label{convection_diffusion_eq_initial_condition}
 \end{figure}
@@ -314,7 +314,7 @@ If we insert for a few steps we see that this takes the form of
        \end{array}\right)\mathbf{u}^n = \mathbf{u}^{n-1} 
 \end{align*}
 \begin{equation*}
- \mathbf{A}\mathbf{u}^n = \mathbf{u^{n-1}}
+ \mathbf{A}\mathbf{u}^n = \mathbf{u}^{n-1}
 \end{equation*}
 This can be solved vey efficiently by a sparse Gaussian elimination, which is quite simple to implement once you take the boundary conditions into account. 
 We implement the Backward Euler discretisation in order to efficiently simlulate for longer times, and by extension to test the effects the longer timesteps will have on the random walk model.
@@ -334,7 +334,7 @@ Inserting \ref{von_neumann_fourier_solution} in the simplified version of the va
  \exp(ikp\Delta x)\left(A^{n+1}-A^n\right) &= A^n\frac{D\Delta t}{\Delta x^2}\left(\exp(ik(p+1)\Delta x)-2\exp(ikp\Delta x) +\exp(ik(p-1)\Delta x)\right)\\
   A^n\exp(ikp\Delta x)\left(A-1\right) &=  A^n\exp(ikp\Delta x)\frac{D\Delta t}{\Delta x^2}\left(\exp(ik\Delta x) -2 + \exp(-ik\Delta x)\right)\\
 \end{align*}
-Using the well known identies $\exp(iax)+\exp(-iax) = \frac{1}{2}\cos^2\left((\frac{ax}{2}\right)$  and $\cos^2(ax)-1 = \sin^2(ax)$ gives us
+Using the well known identies $\exp(iax)+\exp(-iax) = \frac{1}{2}\cos^2\left(\frac{ax}{2}\right)$  and $\cos^2(ax)-1 = \sin^2(ax)$ gives us
 \begin{equation}
  A-1 = \frac{D\Delta t}{\Delta x^2}\sin^2\left(\frac{k\Delta x}{2}\right)
 \end{equation}
